@@ -825,6 +825,9 @@ Release 0.18.0 - Unreleased
     HADOOP-3647. Add debug logs to help track down a very occassional,
     hard-to-reproduce, bug in shuffle/merge on the reducer. (acmurthy) 
 
+    HADOOP-3716. Prevent listStatus in KosmosFileSystem from returning
+    null for valid, empty directories. (Sriram Rao via cdouglas)
+
 Release 0.17.2 - Unreleased
 
   BUG FIXES
